# pocketpoker

./: .replit  Cargo.toml  go.sh  ideas  scratch
src/: card.rs  lib.rs  score.rs  tests.rs  ui.rs
